# nso.rs

./: Cargo.toml  README.md
src/: main.rs
src/imink/: mod.rs
src/models/: imink.rs  mod.rs
src/models/nintendo/: accounts.rs  login.rs  metadata.rs  mod.rs  nsa.rs  user_info.rs
src/nintendo/: login.rs  metadata.rs  mod.rs  nsa.rs
src/utils/: mod.rs
