[package]
name = "nso-rs"
version = "0.1.0"
edition = "2021"
authors = ["zeroday0619 <zeroday0619_dev@outlook.com"]
repository = "https://github.com/zeroday0619/nso.rs"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.162", features = ["derive"] }
regex = { version = "1.8.1" }
